--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This is a git where I develop codes as I grow in ML.
+The FuelConsumption.csv data-set used in examples are downloaded from https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/FuelConsumptionCo2.csv
